<?xml version="1.0"?>
<package>
  <name>rail_ceiling</name>
  <version>0.0.4</version>
  <description>Overhead Camera System for Tracking AR Tags</description>
  
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_ceiling</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_ceiling/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_ceiling</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
